--- a/client/package.json
+++ b/client/package.json
@@ -28,8 +28,15 @@
   },
   "dependencies": {
     "@babel/cli": "^7.17.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.3",
+    "@reduxjs/toolkit": "^1.9.1",
     "path": "^0.12.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.6.1"
   }
 }
