--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A new react app without CRA",
   "main": "src/index.js",
+  "proxy" : "http://localhost:9000/",
   "scripts": {
     "start": "webpack-dev-server .",
     "build": "webpack .",
